--- a/sass/_sections/_portfolio.sass
+++ b/sass/_sections/_portfolio.sass
@@ -31,7 +31,7 @@
   .portfolio
     &-list
       margin-right: 0
-      z-index: 100
+      z-index: 5
     &-gallary
       margin-left: -100px
       z-index: 1
